tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__StartingFusion-AAAAAAAAAAAAAAAAAAAEvA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1212,
  "prerequisites": [
    1680,
    17036923628064755079,
    2607,
    7687997760864744372
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Nuclear fusion is the next major step in your progression, and to accomplish it you will need a Fusion Reactor Mark I. You will unlock new materials across the next few tiers with fusion, making this a required multiblock. Europium is what you will need first to make it to ZPM.\n\nAt the same time, fusion can generate power for you, primarily via Helium Plasma in this first tier. The speed of the reactor can make for significant EU/t, but actually consuming this plasma fast enough at this early stage is difficult. You will have Large Plasma Turbines, which can run a buffered dynamo for 4 output amps. This might require a lot of spam compared to powergen setups you might be using, such as UCFE, vac nukes or other options. Later, you will unlock XL turbines and a fusion line for them. \n\nFor your first reactor, you will need a controller, 1-16 fluid input hatches, 1-16 fluid output hatches, and 16 LuV+ energy hatches. Each energy hatch has an energy capacity of 10M EU and draws up to 2048 EU/t.\n\nThat means you can do any fusion recipe with a start cost of 160M EU or less, and takes 32768 EU/t or less. Using more fluid hatches means you need less fusion casings. While this doesn't matter as much for the mk1 reactor, this principle helps tremendously with the higher reactor tiers.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lStarting Fusion",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1680,
    17036923628064755079,
    2607,
    7687997760864744372
  ],
  "rewards": [],
  "tasks": []
}
