tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__ThoughtEmittersW-AAAAAAAAAAAAAAAAAAAGkA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1680,
  "prerequisites": [
    1490
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Field generators are a big part of lategame crafts. And yes, they always suck to make.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lThought Emitters Were Bad Enough?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1490
  ],
  "rewards": [],
  "tasks": []
}
